# CON5013

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
con5013/: __init__.py  blueprint.py  cli.py
con5013/core/: __init__.py  api_scanner.py  log_monitor.py  security.py  system_monitor.py  terminal_engine.py  utils.py
con5013/static/css/: con5013.css
con5013/static/js/: con5013.js
con5013/templates/: auth_required.html  console.html  overlay.html
docs/: CON5013_FINAL_DELIVERY.md  DELIVERY_OVERVIEW.md  architecture.md  faq.md  features.md  installation.md  security.md
examples/: advanced_implementation.py  crawl4ai_integration.py  example_app.py  matrix_app.py  secure_production_app.py  simple_integration.py  test_app.py
tests/: test_con5013.py  test_con5013_app.py  test_integration.py  test_matrix_app.py
